--- a/Fluent.Ribbon.Showcase/Fluent.Ribbon.Showcase.csproj
+++ b/Fluent.Ribbon.Showcase/Fluent.Ribbon.Showcase.csproj
@@ -28,4 +28,18 @@
     <Reference Include="System.Data" />
     <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Update="JetBrains.Annotations" Version="2019.1.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>compile; build</IncludeAssets>
+    </PackageReference>
+    <PackageReference Update="StyleCop.Analyzers" Version="1.1.118">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>build; analyzers</IncludeAssets>
+    </PackageReference>
+    <PackageReference Update="WpfAnalyzers" Version="2.4.5">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>build; analyzers</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
 </Project>
