--- a/Directory.build.props
+++ b/Directory.build.props
@@ -8,8 +8,8 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp3.0;net462;net45</TargetFrameworks>
-    <LangVersion>preview</LangVersion>
+    <TargetFrameworks>netcoreapp3.0;net48;net452</TargetFrameworks>
+    <LangVersion>latest</LangVersion>
     
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <GenerateDocumentationFile>false</GenerateDocumentationFile>
