the shit hit the fan with the local VS2019 NuGet package manger: had to nuke everything and re-install, after trying everything before that, including running the commandline nuget.exe (same error, same shite, no resolve :-(( ) and hand-patching package deps, etc. This is the stripped-off last ditch attempt just before we went and did a full VS2019 re-install in an attempt to recover from the sudden NuGet belly-up playing dead as a doornail responses and consequent inability to build any .NET projects any longer. NuGet happened to go belly up while I fiddled a bit with this project, so this one caught the brunt of my activity to recover VS2019' NuGet.

--- a/Fluent.Ribbon.Showcase/Fluent.Ribbon.Showcase.csproj
+++ b/Fluent.Ribbon.Showcase/Fluent.Ribbon.Showcase.csproj
@@ -27,12 +27,15 @@
     <None Include="MahMetro*" />
   </ItemGroup>
 
+<!--
+
   <ItemGroup>
     <ProjectReference Include="..\Fluent.Ribbon\Fluent.Ribbon.csproj" />
 
-    <PackageReference Include="MahApps.Metro.IconPacks.Material" />
-    <PackageReference Include="MahApps.Metro" Condition="$(InlcudeMahAppsMetro)" />
+    <PackageReference Include="MahApps.Metro.IconPacks.Material" Version="0.1" />
+    <PackageReference Include="MahApps.Metro" Condition="$(InlcudeMahAppsMetro)" Version="0.1" />
   </ItemGroup>
+-->
 
   <ItemGroup Condition="$(DefineConstants.Contains(NETCOREAPP)) == false">
     <Reference Include="System.Web" />
