--- a/Directory.packages.props
+++ b/Directory.packages.props
@@ -1,26 +1,28 @@
 <Project>
+<!--
     <ItemGroup>
-        <PackageVersion Include="ControlzEx" version="4.3.0" />
-        <PackageVersion Include="XamlColorSchemeGenerator" version="4-*" />
+        <PackageVersion Include="ControlzEx"    Version="0.1" />
+        <PackageVersion Include="XamlColorSchemeGenerator"    Version="0.1" />
     </ItemGroup>
 
     <ItemGroup Label="Showcase">
-        <PackageVersion Include="MahApps.Metro.IconPacks.Material" version="4.*" />
-        <PackageVersion Include="MahApps.Metro" version="2.0.*" />
+        <PackageVersion Include="MahApps.Metro.IconPacks.Material"    Version="0.1" />
+        <PackageVersion Include="MahApps.Metro"    Version="0.1" />
     </ItemGroup>
 
     <ItemGroup Label="Test">
-        <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="16.*" />
-        <PackageVersion Include="NUnit3TestAdapter" Version="3.*" />
+        <PackageVersion Include="Microsoft.NET.Test.Sdk"    Version="0.1" />
+        <PackageVersion Include="NUnit3TestAdapter"    Version="0.1" />
 
-        <PackageVersion Include="NUnit" version="3.*" />
+        <PackageVersion Include="NUnit"    Version="0.1" />
     </ItemGroup>
 
     <ItemGroup Label="Build">
-        <PackageVersion Include="JetBrains.Annotations" version="2020.*" />
+        <PackageVersion Include="JetBrains.Annotations"    Version="0.1" />
 
-        <PackageVersion Include="Microsoft.CodeAnalysis.CSharp" version="3.*" />
-        <PackageVersion Include="StyleCop.Analyzers" version="1.1.*" />
-        <PackageVersion Include="WpfAnalyzers" version="3.1.*" />
+        <PackageVersion Include="Microsoft.CodeAnalysis.CSharp"    Version="0.1" />
+        <PackageVersion Include="StyleCop.Analyzers"    Version="0.1" />
+        <PackageVersion Include="WpfAnalyzers"   Version="0.1" />
     </ItemGroup>
+-->
 </Project>
