--- a/Fluent.Ribbon.Tests/Fluent.Ribbon.Tests.csproj
+++ b/Fluent.Ribbon.Tests/Fluent.Ribbon.Tests.csproj
@@ -21,10 +21,14 @@
   <ItemGroup>
     <ProjectReference Include="..\Fluent.Ribbon\Fluent.Ribbon.csproj" />
   </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" />
-    <PackageReference Include="NUnit3TestAdapter" />
+<!--
 
-    <PackageReference Include="NUnit" />
+  <ItemGroup>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="0.1" />
+    <PackageReference Include="NUnit3TestAdapter" Version="0.1" />
+
+    <PackageReference Include="NUnit" Version="0.1" />
   </ItemGroup>
+-->
+
 </Project>
