mxining in the latest code edits

--- a/Fluent.Ribbon.Tests/Fluent.Ribbon.Tests.csproj
+++ b/Fluent.Ribbon.Tests/Fluent.Ribbon.Tests.csproj
@@ -43,5 +43,6 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>build; analyzers</IncludeAssets>
     </PackageReference>
+    <PackageReference Update="XamlColorSchemeGenerator" Version="4.0.0-rc0140" />
   </ItemGroup>
 </Project>
