--- a/Fluent.Ribbon.Showcase/Fluent.Ribbon.Showcase.csproj
+++ b/Fluent.Ribbon.Showcase/Fluent.Ribbon.Showcase.csproj
@@ -42,5 +42,6 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>build; analyzers</IncludeAssets>
     </PackageReference>
+    <PackageReference Update="XamlColorSchemeGenerator" Version="4.0.0-rc0140" />
   </ItemGroup>
 </Project>
