--- a/Fluent.Ribbon.Showcase/Fluent.Ribbon.Showcase.csproj
+++ b/Fluent.Ribbon.Showcase/Fluent.Ribbon.Showcase.csproj
@@ -18,8 +18,8 @@
   <ItemGroup>
     <ProjectReference Include="..\Fluent.Ribbon\Fluent.Ribbon.csproj" />
 
-    <PackageReference Include="MahApps.Metro.IconPacks" version="3.5.0" />
-    <PackageReference Include="MahApps.Metro" version="2.0.0-alpha0660" />
+    <PackageReference Include="MahApps.Metro.IconPacks" version="4.3.0" />
+    <PackageReference Include="MahApps.Metro" version="2.1.1" />
     <!-- Costura does not work with .net core 3.0 as of 4.0 -->
     <!-- <PackageReference Include="Costura.Fody" version="4.*" PrivateAssets="All" Condition="'$(TargetFramework)' != 'netcoreapp3.0'" /> -->
   </ItemGroup>
@@ -30,18 +30,18 @@
     <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Update="JetBrains.Annotations" Version="2019.1.3">
+    <PackageReference Update="JetBrains.Annotations" Version="2020.1.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>compile; build</IncludeAssets>
     </PackageReference>
+    <PackageReference Update="Microsoft.CodeAnalysis.CSharp" Version="3.6.0" />
     <PackageReference Update="StyleCop.Analyzers" Version="1.1.118">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>build; analyzers</IncludeAssets>
     </PackageReference>
-    <PackageReference Update="WpfAnalyzers" Version="2.4.5">
+    <PackageReference Update="WpfAnalyzers" Version="3.1.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>build; analyzers</IncludeAssets>
     </PackageReference>
-    <PackageReference Update="XamlColorSchemeGenerator" Version="4.0.0-rc0140" />
   </ItemGroup>
 </Project>
