--- a/Directory.build.props
+++ b/Directory.build.props
@@ -8,26 +8,20 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp3.0;net48;net452</TargetFrameworks>
+    <TargetFrameworks>netcoreapp3.1;net48</TargetFrameworks>
     <LangVersion>latest</LangVersion>
-    
+
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <GenerateDocumentationFile>false</GenerateDocumentationFile>
     <Configuration Condition="'$(Configuration)' == ''">Release</Configuration>
     <CodeAnalysisRuleSet>$(MSBuildThisFileDirectory)/Fluent.Ribbon.ruleset</CodeAnalysisRuleSet>
     <OutputPath Condition="$(IsBuildingWpfTempProj) != 'true'">$(MSBuildThisFileDirectory)/bin/$(MSBuildProjectName)/$(Configuration)/</OutputPath>
-    <RestoreSources Condition="Exists('C:/DEV/OSS_Own/ControlzEx/Publish')">C:/DEV/OSS_Own/ControlzEx/Publish</RestoreSources>    
 
     <AutoGenerateBindingRedirects Condition="$(DefineConstants.Contains(NETCOREAPP)) == false">true</AutoGenerateBindingRedirects>
 
     <UseWpf>true</UseWpf>
     <UseWindowsForms>true</UseWindowsForms>
     <NoWarn>$(NoWarn);NU1701;NU1603;NU1605;SA1652</NoWarn>
-  </PropertyGroup>
-
-  <PropertyGroup>
-    <!-- <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
-    <RestoreLockedMode Condition="'$(RestoreLockedMode)' == ''">true</RestoreLockedMode> -->
   </PropertyGroup>
 
   <ItemGroup>
@@ -43,10 +37,6 @@
     <Compile DependentUpon="%(Filename)" SubType="Designer" Update="**\*.xaml$(DefaultLanguageSourceExtension)" />
   </ItemGroup> -->
 
-  <PropertyGroup>
-    <XamlColorSchemeGeneratorVersion>3.0.0.31</XamlColorSchemeGeneratorVersion>
-  </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" version="2019.*" privateAssets="all" includeAssets="build;compile" />
 
@@ -56,7 +46,5 @@
     <PackageReference Include="ReflectionAnalyzers" version="0.1.19-dev" privateAssets="all" includeAssets="build;analyzers" /> -->
     <PackageReference Include="StyleCop.Analyzers" version="1.1.*" privateAssets="all" includeAssets="build;analyzers" />
     <PackageReference Include="WpfAnalyzers" version="2.4.*" privateAssets="all" includeAssets="build;analyzers" />
-
-    <PackageReference Include="XamlColorSchemeGenerator" version="$(XamlColorSchemeGeneratorVersion)" privateAssets="All" />
   </ItemGroup>
 </Project>
