--- a/Fluent.Ribbon.Showcase/Fluent.Ribbon.Showcase.csproj
+++ b/Fluent.Ribbon.Showcase/Fluent.Ribbon.Showcase.csproj
@@ -20,6 +20,7 @@
 
     <PackageReference Include="MahApps.Metro.IconPacks" version="3.5.0" />
     <PackageReference Include="MahApps.Metro" version="2.0.0-alpha0660" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <!-- Costura does not work with .net core 3.0 as of 4.0 -->
     <!-- <PackageReference Include="Costura.Fody" version="4.*" PrivateAssets="All" Condition="'$(TargetFramework)' != 'netcoreapp3.0'" /> -->
   </ItemGroup>
