--- a/Fluent.Ribbon/Fluent.Ribbon.csproj
+++ b/Fluent.Ribbon/Fluent.Ribbon.csproj
@@ -40,18 +40,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Update="JetBrains.Annotations" Version="2019.1.3">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>compile; build</IncludeAssets>
-    </PackageReference>
-    <PackageReference Update="StyleCop.Analyzers" Version="1.1.118">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>build; analyzers</IncludeAssets>
-    </PackageReference>
-    <PackageReference Update="WpfAnalyzers" Version="2.4.5">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>build; analyzers</IncludeAssets>
-    </PackageReference>
+    <PackageReference Update="JetBrains.Annotations" Version="2020.1.0" />
+    <PackageReference Update="Microsoft.CodeAnalysis.CSharp" Version="3.6.0" />
+    <PackageReference Update="StyleCop.Analyzers" Version="1.1.118" />
+    <PackageReference Update="WpfAnalyzers" Version="3.1.0" />
   </ItemGroup>
 
   <!-- NuGet -->
