added project task which will execute as part of Build > Clean in Visual Studio 2019: delete the previously generated color scheme files so that XamlColorSchemeGenerator will certainly generate new XAML files.

--- a/Fluent.Ribbon/Fluent.Ribbon.csproj
+++ b/Fluent.Ribbon/Fluent.Ribbon.csproj
@@ -82,4 +82,15 @@
     We need to unify TargetFramework between empty, net45, netcoreapp3.0 etc.-->
     <MSBuild Projects="$(MSBuildProjectFile)" Targets="GenerateXamlFilesInner" Properties="TargetFramework=once" />
   </Target>
+
+  <!-- https://stackoverflow.com/questions/5102661/need-a-post-clean-event-in-visual-studio -->
+  <Target Name="MyDistClean" AfterTargets="Clean">
+    <ItemGroup>
+      <ThemeFiles Include="$(MSBuildProjectDirectory)/Themes/Themes/Dark.*" />
+      <ThemeFiles Include="$(MSBuildProjectDirectory)/Themes/Themes/Light.*" />
+      <ThemeFiles Include="$(MSBuildProjectDirectory)/Themes/Themes/Colorful.*" />
+    </ItemGroup>
+    <Message Text="Deleting XAML Color Scheme files..." Importance="high" />
+    <Delete Files="$(ThemeFiles)" ContinueOnError="true" />
+  </Target>
 </Project>
